# SimuladorMaquinaPila

./: .gitignore  README.md  meson.build  org.gnome.simulador.json
data/: meson.build  org.gnome.simulador.appdata.xml.in  org.gnome.simulador.desktop.in  org.gnome.simulador.gschema.xml
po/: POTFILES  meson.build
src/: main.c  meson.build  simulador-about.c  simulador-about.h  simulador-about.ui  simulador-window.c  simulador-window.h  simulador-window.ui  simulador.gresource.xml
src/resource/: jasm.lang  molokai.xml  style.css
src/util/: cfg.c  cfg.h  function.h  instruction.c  instruction.h  lexer.c  lexer.h  parser.c  parser.h  production.c  production.h  program_context.c  program_context.h  symbol.c  symbol.h  token.c  token.h
